--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_registration_screen_dark"
-    tools:context=".CadastroActivity">
+    tools:context=".activities.CadastroActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
